  [Michele Simionato]
  * Added an header with metadata to the exported hazard curves and maps
  * Avoid storing filtered-away probability maps, thus fixing a bug
  * Restored the precalculation consistency check that was disabled during the
    transition to engine 2.0
  * Fixed a bug with `oq engine --delete-calculation`
  * Hazard curves/maps/uniform spectra can now be recomputed
  * Restored the early check on missing taxonomies
  * Raise an early error if an user forget the `rupture_mesh_spacing` parameter
  * Fixed a bug while deleting jobs from the db in Ubuntu 12.04
  * Ported the shapefile converter from the nrml_converters
  * Added source model information in the file `realizations.csv`
  * `oq engine --run job.ini --exports csv` now also exports the realizations
  * Introduced the format NRML 0.5 for source models
  * Added a check on the version in case of export errors
  * Extended `oq purge` to remove calculations from the database too
  * Fixed `--make-html-report`: the view task_info was not registered
  * Stored several strings as HDF5-variable-length strings
  * Fixed an export bug for the hazard curves in .geojson format
  * Removed the array cost_types from the datastore
  * Taxonomies with chars not in the range a-z0-9 were incorrectly rejected
  * Improved the XML parsing utilities in speed, memory, portability and
    easy of use
  * Forbidden the reuse of exposure because is was fragile and error prone
  * Fixed a bug with the `realizations` array, which in hazard calculations
    was empty in the datastore

python-oq-engine (2.0.0-0~precise01) precise; urgency=low

  [Michele Simionato]
  * Quoted the taxonomies in the CSV exports
  * Fixed a bug in classical_damage and added a master test for it
  * Fixed the escaping of the taxonomies in the datastore
  * Fixed the names of the exported risk files
  * Fixed a segfault in the WebUI when exporting files with h5py >= 2.4
  * Added a command `oq dbserver` to start/stop the database server